# Test_Agent_IA

./: .gitignore  Dockerfile  README.md  agent.py  api.py  embedder.py  index.html  ingestion.py  main.py  pyproject.toml  requirements.txt  retriever.py  store.json  test.py  vector_store.py
