[project]
name = "test-agent-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "pymupdf>=1.27.2",
    "requests>=2.32.5",
]
